app@taz.de -> app-fdroid@taz.de

--- a/tazapp/src/taz/assets/help/help.html
+++ b/tazapp/src/taz/assets/help/help.html
@@ -50,7 +50,7 @@
         <p>Mit dem Button „EPAPER-ABO BESTELLEN“ gelangen Sie zum Bestellformular.</p>
         <p class="centered-img"><img src="abo-bestellen1.png"></p>
         <p>Nach der Bestellung des (Probe-)Abos erhalten Sie in der Regel bis zum nächsten Werktag Ihre Abo-ID und Ihr Passwort per E-Mail.</p>
-        <p class="italic">Bei Fragen zur App:  <a href="mailto:app@taz.de">app@taz.de</a></p>
+        <p class="italic">Bei Fragen zur App:  <a href="mailto:app-fdroid@taz.de">app-fdroid@taz.de</a></p>
         <p class="italic">Kontakt zur Abo-Abteilung:  <a href="mailto:digiabo@taz.de">digiabo@taz.de</a></p>
         <a href="#" class="close-tabs" onClick="closeTabs()" >schließen</a>
         <div class="tab-padding"></div>
