--- a/tazapp/src/taz/assets/imprint.html
+++ b/tazapp/src/taz/assets/imprint.html
@@ -39,7 +39,7 @@
     <p><strong>E-Mail</strong></p>
 
     <p>
-        <a href="mailto:app@taz.de">Fragen zur App</a></p>
+        <a href="mailto:app-fdroid@taz.de">Fragen zur App</a></p>
 
     <p><a href="mailto:digiabo@taz.de">Fragen zum Digitalen Abo</a></p>
     </p>
