--- a/tazapp/src/taz/assets/help/intro.html
+++ b/tazapp/src/taz/assets/help/intro.html
@@ -41,7 +41,7 @@
   <div class="intro-text">
     <p>Wenn Sie ein Abo abgeschlossen haben oder bereits ePaper-Abonnent*in sind, gehen Sie bitte über das Menü der App zum Bereich „Kundendaten“ und geben Sie dort Ihre Abo-ID und Ihr Passwort ein. Tippen Sie auf „Daten prüfen“, um die Anmeldung abzuschließen.</p>
     <p>Jetzt können Sie die aktuellen taz-Ausgaben herunterladen und lesen.</p>
-    <p class="italic">Bei Fragen zur App:  <a href="mailto:app@taz.de">app@taz.de</a></p>
+    <p class="italic">Bei Fragen zur App:  <a href="mailto:app-fdroid@taz.de">app-fdroid@taz.de</a></p>
     <p class="italic">Kontakt zur Abo-Abteilung:  <a href="mailto:digiabo@taz.de">digiabo@taz.de</a></p>
   </div>
 
