--- a/tazapp/src/taz/assets/help/help.html
+++ b/tazapp/src/taz/assets/help/help.html
@@ -45,7 +45,7 @@
       <h2><span class="tab-text">ePaper abonnieren oder testen</span><span class="tab-icon">&#9660;</span></h2>
       <div class="tab-content">
         <p><b>Testen Sie das ePaper 14 Tage lang kostenlos als <a href="https://www.taz.de/Das-liest-sich-gut/!140070/">Probeabo</a>.</b></p>
-        <p>Oder werden Sie direkt Digitalleser*in und bestellen Sie ein ePaper-Abo auf <a href="http://www.taz.de/!p4350/">taz.de</a>. Hier gibt es auch alle wichtigen Informationen zum ePaper und zu unseren Aboprämien.</p>
+        <p>Oder werden Sie direkt Digitalleser*in und bestellen Sie ein ePaper-Abo auf <a href="https://www.taz.de/!p4350/">taz.de</a>. Hier gibt es auch alle wichtigen Informationen zum ePaper und zu unseren Aboprämien.</p>
         <p>Wenn Sie sich direkt für eines unserer Abo-&#x200b;Angebote entscheiden wollen, gehen Sie dafür über das Menü der App zum Bereich Kundendaten.</p>
         <p>Mit dem Button „EPAPER-ABO BESTELLEN“ gelangen Sie zum Bestellformular.</p>
         <p class="centered-img"><img src="abo-bestellen1.png"></p>
