more http -> https

--- a/tazapp/src/taz/assets/help/intro.html
+++ b/tazapp/src/taz/assets/help/intro.html
@@ -31,7 +31,7 @@
   <div class="intro-text">
     <p><b>Testen Sie das ePaper 14 Tage lang kostenlos als <a href="https://www.taz.de/Das-liest-sich-gut/!140070/">Probeabo</a>.</b></p>
 
-    <p>Oder werden Sie direkt Digitalleser*in und bestellen Sie ein ePaper-Abo auf <a href="http://www.taz.de/!p4350/">taz.de</a>. Hier gibt es auch alle wichtigen Informationen zum ePaper und zu unseren Aboprämien.</p>
+    <p>Oder werden Sie direkt Digitalleser*in und bestellen Sie ein ePaper-Abo auf <a href="https://www.taz.de/!p4350/">taz.de</a>. Hier gibt es auch alle wichtigen Informationen zum ePaper und zu unseren Aboprämien.</p>
 
     <p>Nach der Bestellung des (Probe-)&#x200b;Abos erhalten Sie in der Regel bis zum nächsten Werktag Ihre Abo-ID und Ihr Passwort per E-Mail.</p>
   </div>
