--- a/tazapp/src/taz/assets/imprint.html
+++ b/tazapp/src/taz/assets/imprint.html
@@ -31,9 +31,10 @@
     </p>
 
     <p>
-        FA Körperschaften IV Berlin Steuer Nr. 30/067/06616<br/>
-        Geschäftsführer: Andreas Bull</br>
-        HRA 21940, Amtsgericht Berlin, Charlottenburg<br/>
+        Amtsgericht Charlottenburg HRA 21940<br/>
+        Komplementärin: Contrapress Media GmbH<br/>
+        Amtsgericht Berlin-Charlottenburg, 92 HRB 14179<br/>
+        Geschäftsführer: Andreas Bull, Andreas Marggraf<br/>
     </p>
 
     <p><strong>E-Mail</strong></p>
