--- a/tazapp/src/taz/assets/imprint.html
+++ b/tazapp/src/taz/assets/imprint.html
@@ -34,7 +34,7 @@
         Amtsgericht Charlottenburg HRA 21940<br/>
         Komplementärin: Contrapress Media GmbH<br/>
         Amtsgericht Berlin-Charlottenburg, 92 HRB 14179<br/>
-        Geschäftsführer: Andreas Bull, Andreas Marggraf<br/>
+        Geschäftsführer:in: Andreas Bull, Aline Lüllmann, Andreas Marggraf<br/>
     </p>
 
     <p><strong>E-Mail</strong></p>
